<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>codeReviewClass</class>
 <widget class="QMainWindow" name="codeReviewClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>codeReview</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0" colspan="2">
     <widget class="QPushButton" name="addButton">
      <property name="text">
       <string>ADD</string>
      </property>
     </widget>
    </item>
    <item row="1" column="3">
     <widget class="QPushButton" name="revisButton">
      <property name="text">
       <string>REVISE</string>
      </property>
     </widget>
    </item>
    <item row="2" column="3">
     <widget class="QLineEdit" name="lineEdit"/>
    </item>
    <item row="1" column="1">
     <widget class="QLabel" name="labelDone">
      <property name="text">
       <string>Done: 5</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="labelLeft">
      <property name="text">
       <string>Left: 9 </string>
      </property>
     </widget>
    </item>
    <item row="0" column="0" colspan="4">
     <widget class="QListWidget" name="listWidget"/>
    </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="selectButton">
      <property name="text">
       <string>SELECT</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>600</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="codeReview.qrc"/>
 </resources>
 <connections/>
</ui>
